--- a/static/style.css
+++ b/static/style.css
@@ -39,7 +39,7 @@ input[type="submit"] {
 div.page {
     background: white;
     border: 1px solid #6ECCC4;
-    width: 700px;
+    width: 900px;
     margin: 30px auto;
 }
 
@@ -64,18 +64,37 @@ div.page div.navigation {
 }
 
 div.page div.navigation a {
-    color: #444
+    color: #444;
     font-weight: bold;
 }
 
 div.page h2 {
-    margin: 0 0 15px 0;
     color: #105751;
     text-shadow: 0 1px 2px #ccc;
 }
 
 div.page div.body {
-    padding: 10px;
+    margin: 0 0 15px;
+    padding: 0;
+    overflow: hidden;
+}
+
+div.page div.body div.sidebar {
+    margin: 0 15px 15px;
+    float: left;
+    width: 220px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
+div.page div.body div.sidebar div.searchbox {
+    width: 210px;
+}
+
+div.page div.body div.content {
+    margin: 0 0 15px;
+    padding: 0;
+    overflow: hidden;
 }
 
 div.page div.footer {
