--- a/templates/forgetpasswd.html
+++ b/templates/forgetpasswd.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}Forget password{% endblock %}
-{% block body %}
+{% block content %}
   <h2>Reset Password?</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
