--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Sign In{% endblock %}
-{% block body %}
-  <h2>Sign In</h2>
+{% block content %}
+<h2>Sign In</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
@@ -10,7 +10,10 @@
       <dt>Password:
       <dd><input type="password" name="password" size="30">
     </dl>
-    <div class="actions"><input type="submit" value="Sign In"></div>
+    <div class="actions">
+      <input type="submit" value="Sign In">
+      <a href="{{ url_for('forget_passwd') }}">Forget password?</a>
+    </div>
   </form>
 {% endblock %}
 
