--- a/templates/view.html
+++ b/templates/view.html
@@ -8,7 +8,7 @@
     My View
   {% endif %}
 {% endblock %}
-{% block body %}
+{% block content %}
   <h2>{{ self.title() }}</h2>
   {% if g.user %}
     {% if request.endpoint == 'user_view' %}
