--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,13 @@
   </div>
   <div class="body">
     <div class="sidebar">
+      <h3>About CloudAcct</h3>
+      <p>CloudAcct is a cloud app for providing accountant service.</p>
+      <h3>Useful link</h3>
+      <ul>
+	<li><a href="{{ url_for('view') }}">The cloud accountant website</a></li>
+	<li><a href="https://github.com/Ted-Chang/CloudAcct">CloudAcct @ github</a></li>
+      </ul>
       <div class="searchbox">
         <h3>Quick Search</h3>
         <form class="search" method="get">
