--- a/static/style.css
+++ b/static/style.css
@@ -140,6 +140,15 @@ div.page div.body div.content div.userconsole {
     font-size: 13px;
 }
 
+div.page div.body div.content div.userconsole div.project {
+    margin-bottom: 15px;
+    border: 1px solid lightgray;
+    background: white;
+    text-indent: 15px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
 div.error {
     margin: 10px 0;
     background: #FAE4E4;
