--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,8 @@
   {% if g.user %}
     <a href="{{ url_for('view') }}">my view</a> |
     <a href="{{ url_for('public_view') }}">public view</a> |
-    <a href="{{ url_for('logout') }}">sign out [{{ g.user.username }}]</a>
+    <a href="{{ url_for('logout') }}">sign out [{{ g.user.username }}]</a> |
+    <a href="{{ url_for('create_project') }}">create project</a>
   {% else %}
     <a href="{{ url_for('public_view') }}">public view</a> |
     <a href="{{ url_for('register') }}">sign up</a> |
@@ -22,6 +23,7 @@
       <ul>
 	<li><a href="{{ url_for('view') }}">The cloud accountant website</a></li>
 	<li><a href="https://github.com/Ted-Chang/CloudAcct">CloudAcct @ github</a></li>
+	<li><a href="https://github.com/Ted-Chang/CloudAcct/issues">Issue Tracker</a></li>
       </ul>
       <div class="searchbox">
         <h3>Quick Search</h3>
