--- a/templates/view.html
+++ b/templates/view.html
@@ -18,6 +18,13 @@
     {% if g.user %}
       <div class="userconsole">
         <h3>Projects</h3>
+	{% for project in projects %}
+	  <div class="project">
+	    <p>Name: <a href="#" >{{ project.project_name }}</a></p>
+	    <p>Company: {{ project.company_name }}</p>
+	    <p>Tax ID: {{ project.tax_id }}</p>
+	  </div>
+	{% endfor %}
       </div>
     {% endif %}
   {% endif %}
