--- a/templates/createproject.html
+++ b/templates/createproject.html
@@ -11,6 +11,12 @@
       <dd><input type="text" name="company_name" size="30" value="{{ request.form.company_name }}">
       <dt>Tax ID:
       <dd><input type="text" name="tax_id" size="30" value="{{ request.form.tax_id }}">
+      <dt>Bank Name:
+      <dd><input type="text" name="bank_name" size="30" value="{{ request.form.bank_name }}">
+      <dt>Bank Account:
+      <dd><input type="text" name="bank_account" size="30" value="{{ request.form.bank_account }}">
+      <dt>Company Address:
+      <dd><input type="text" name="company_address" size="30" value="{{ request.form.company_address }}">
     </dl>
     <div class="action"><input type="submit" value="Create"></div>
   </form>
