--- a/templates/view.html
+++ b/templates/view.html
@@ -1,26 +1,26 @@
 {% extends "layout.html" %}
 {% block title %}
-  {% if request.endpoint == 'public_view' %}
+  {% if request.endpoint == 'index' %}
     Public View
-  {% else %}
+  {% elif request.endpoint == 'show_user' %}
     My View
   {% endif %}
 {% endblock %}
 {% block content %}
   <h2>{{ self.title() }}</h2>
-  {% if request.endpoint == 'public_view' %}
+  {% if request.endpoint == 'index' %}
     <div class="getstarted">
       <p>Learn CloudAcct and get started within your company!</p>
       <a href="{{ url_for('user_guide') }}" class="button">Read the guide</a>
       <a href="{{ url_for('register') }}" class="button">Get started</a>
     </div>
-  {% elif request.endpoint == 'view' %}
+  {% elif request.endpoint == 'show_user' %}
     {% if g.user %}
       <div class="userconsole">
         <h3>Projects</h3>
 	{% for project in projects %}
 	  <div class="project">
-	    <p>Name: <a href="#" >{{ project.project_name }}</a></p>
+	    <p>Name: <a href="{{ url_for('.show_project', username=g.user['username'], project_name=project.project_name) }}" >{{ project.project_name }}</a></p>
 	    <p>Company: {{ project.company_name }}</p>
 	    <p>Tax ID: {{ project.tax_id }}</p>
 	  </div>
