--- a/templates/createproject.html
+++ b/templates/createproject.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Create Project{% endblock %}
 {% block content %}
-  <h2>Create Project</h2>
+  <h2 id="page-title">Create Project</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
