--- a/templates/userguide.html
+++ b/templates/userguide.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block title %}User Guide{% endblock %}
 {% block content %}
-<h2>What is CloudAcct?<h2>
+{{ content }}
 {% endblock %}
