--- a/templates/forgetpasswd.html
+++ b/templates/forgetpasswd.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Forget password{% endblock %}
 {% block content %}
-  <h2>Reset Password?</h2>
+  <h2 id="page-title">Reset Password?</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
