--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Sign In{% endblock %}
 {% block content %}
-<h2>Sign In</h2>
+<h2 id="page-title">Sign In</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
