--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Sign Up{% endblock %}
 {% block content %}
-  <h2>Sign Up</h2>
+  <h2 id="page-title">Sign Up</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
