--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 14px;
 }
 
-#band {
+.band {
     background: #6ECCC4;
     margin: 0;
     padding: 10px 14px;
@@ -14,26 +14,30 @@ body {
     font-weight: normal;
 }
 
-#navigation-link {
-    color: #444;
-    font-weight: bold;
-}
-
-#page-title {
-    color: #105751;
-    text-shadow: 0 1px 2px #ccc;
-}
-
-#cloud-acct-bold {
-    font-weight: bold;
-}
-
 a {
     color: #26776F;
 }
 
 a:hover {
     color: #333;
+}
+
+.navigation-link {
+    color: #26776F;
+    font-weight: bold;
+}
+
+.navigation-link:hover {
+    color: #333;
+}
+
+.page-title {
+    color: #105751;
+    text-shadow: 0 1px 2px #ccc;
+}
+
+.cloud-acct-bold {
+    font-weight: bold;
 }
 
 .table {
@@ -46,7 +50,6 @@ a:hover {
     border: none;
     color: white;
     text-align: center;
-    font-size: 14px;
     display: inline-block;
     cursor: pointer;
 }
@@ -56,6 +59,11 @@ a:hover {
     background-color: #ccc!important;
 }
 
+.border-radius {
+    border-radius: 2px;
+    border-radius: 2px;
+}
+
 input[type="text"],
 input[type="password"] {
     background: white;
@@ -63,8 +71,6 @@ input[type="password"] {
     padding: 2px;
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 14px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
     color: #105751;
 }
 
@@ -75,8 +81,6 @@ input[type="submit"] {
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 14px;
     font-weight: bold;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
     color: white;
 }
 
@@ -94,7 +98,6 @@ div.page div.navigation {
     border-bottom: 1px solid #eee;
     color: #888;
     font-size: 12px;
-    letter-spacing: 0.5px;
 }
 
 div.page div.body {
@@ -139,7 +142,7 @@ div.page div.body div.project_toolbar {
     margin-top: 10px;
 }
 
-#toolbar-link {
+.toolbar-link {
     margin-right: 10px;
 }
 
@@ -167,20 +170,14 @@ div.page div.body div.content div.getstarted {
     margin-right: 15px;
     border: 1px solid #ccc;
     background: #E3EBEA;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
     padding: 3px;
-    font-size: 13px;
 }
 
 div.page div.body div.content div.userconsole {
     margin-right: 15px;
     border: 1px solid #ccc;
     background: #E3EBEA;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
     padding: 3px;
-    font-size: 13px;
 }
 
 div.page div.body div.content div.userconsole div.project {
@@ -196,8 +193,6 @@ div.error {
     margin: 10px 0;
     background: #FAE4E4;
     border: 1px solid #DD6F6F;
-    -moz-border-radius: 2px;
-    -webkit-border-radus: 2px;
     padding: 4px;
     font-size: 13px;
 }
