--- a/templates/forgetpasswd.html
+++ b/templates/forgetpasswd.html
@@ -1,15 +1,15 @@
-{% extends "layout.html" %}
+{% extends "layout2.html" %}
 {% block title %}Forget password{% endblock %}
 {% block content %}
-  <h2 id="page-title">Reset Password?</h2>
-  {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
+  <h2 class="page-title border-radius">Reset Password?</h2>
+  {% if error %}<div class="error border-radius"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
       <dt>Username:
-      <dd><input type="text" name="username" size="30" value="{{ request.form.username }}">
+      <dd><input type="text" class="border-radius" name="username" size="30" value="{{ request.form.username }}">
       <dt>E-Mail:
-      <dd><input type="text" name="email" size="30" value="{{ request.form.email }}">
+      <dd><input type="text" class="border-radius" name="email" size="30" value="{{ request.form.email }}">
     </dl>
-    <div class="actions"><input type="submit" value="Reset"></div>
+    <div class="actions"><input type="submit" class="border-radius" value="Reset"></div>
   </form>
 {% endblock %}
