--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,17 @@
-{% extends "layout.html" %}
+{% extends "layout2.html" %}
 {% block title %}Sign In{% endblock %}
 {% block content %}
-<h2 id="page-title">Sign In</h2>
+<h2 class="page-title">Sign In</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
       <dt>Username:
-      <dd><input type="text" name="username" size="30" value="{{ request.form.username }}">
+      <dd><input type="text" class="border-radius" name="username" size="30" value="{{ request.form.username }}">
       <dt>Password:
-      <dd><input type="password" name="password" size="30">
+      <dd><input type="password" class="border-radius" name="password" size="30">
     </dl>
     <div class="actions">
-      <input type="submit" value="Sign In">
+      <input type="submit" class="border-radius" value="Sign In">
       <a href="{{ url_for('forget_passwd') }}">Forget password?</a>
     </div>
   </form>
