--- a/templates/casestudy.html
+++ b/templates/casestudy.html
@@ -1,1 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+  CloudAcct User Case Studies
+{% endblock %}
+{% block body %}
+  <h2 class="page-title">{{ self.title() }}</h2>
+{% endblock %}
